# simiu

./: .gitignore  README.md  gifu.toml.example  pyproject.toml  simiu.toml  simiu.toml.example
src/gifu/: app.py  config.py  gifu.toml
src/simiu/: app.py  cli.py  config.py  grouping.py  models.py  operations.py  path_input.py  scanner.py  similarity.py  ui.py
tests/: test_gifu_out_mode.py  test_gifu_perf.py
