[project]
name = "simiu"
version = "0.1.0"
description = "CLI for grouping illustration variation images into sets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "simiu" }]
dependencies = [
  "pillow>=10.0.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "pyperclip>=1.8.2"
]

[project.scripts]
simiu = "simiu.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
